# kafka-sistemas-distribuidos

./: .env  README.md  consumer.py  docker-compose.yml  pom.xml  producer.py  pyproject.toml  startup.py  util.py
processamento-vendas/src/main/java/servico/: ProcessadorVendas.java
src/main/java/kafkademo/: ComsumoKafka.java
venda-ingressos/: README.md  pom.xml
venda-ingressos/src/main/java/Servico/: GeradorVendas.java
venda-ingressos/src/main/java/kafkademo/: ComsumoKafka.java  EnvioKafka.java
venda-ingressos/src/main/java/model/: Venda.java
venda-ingressos/src/main/java/serializer/: VendaSerializer.java
